--- a/info/index.html
+++ b/info/index.html
@@ -40,6 +40,17 @@
             </ul>
         </div>
     </nav>
+
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>Info</h1>
+                <h2>About Lynxity</h2>
+                <p>What makes us so special, you ask? Well, we have Creative Games, Minigames, and Survival games! What do we mean by this? Well, survival games include: Factions, Anarchy, Skyblock and private worlds. Creative Games are the same, just in.. well, creative. Oh, a flat world with infinite plots and private flat worlds too! Our Minigames also are amazing, we have so much! I'll list off the my favroite ones: WaterRush, Skywars: Lucky Ores, Skywars: Loot Chests, BedWars, and DeathRun! And just think of how much more there will be! Cmon, Have some fun, <a href='/'>Play Lynxity today!</a></p>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
